ticket-frontend/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-frontend
  template:
    metadata:
      labels:
        app: ticket-frontend
    spec:
      containers:
        - name: ticket-frontend
          image: victory11942656/ticket-frontend:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
