ticket-frontend/manifests/backend-servioce.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-backend
spec:
  selector:
    app: ticket-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
