ticket-frontend/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-frontend
spec:
  selector:
    app: ticket-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
